--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/index.xhtml
@@ -40,8 +40,8 @@
                     <p:column headerText="Capacidad" filterBy="#{car.crCapacidad}" filterable="true" filterMatchMode="contains">
                         #{car.crCapacidad}
                     </p:column>
-                    <p:column headerText="Docente" filterBy="#{car.idDocente.nombreCompleto}" filterable="true" filterMatchMode="contains">
-                        #{car.idDocente.nombreCompleto}
+                    <p:column headerText="Docente" filterBy="#{car.docente.nombreCompleto}" filterable="true" filterMatchMode="contains">
+                        #{car.docente.nombreCompleto}
                     </p:column>
                     <p:column headerText="Grado" filterBy="#{car.idGrado.grNombre}" filterable="true" filterMatchMode="contains">
                         #{car.idGrado.grNombre}
