--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/inscritos.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/inscritos.xhtml
@@ -61,7 +61,7 @@
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
                 <p:commandButton value="Refrescar" action="#{gestionCursoController.refreshInscritos()}" update="consulta"></p:commandButton>
-                <p:commandButton value="Regresa" immediate="true">
+                <p:commandButton value="regresar" immediate="true">
                         <p:ajax listener="#{gestionCursoController.setIndexMenu(0)}"/>
          </p:commandButton>
          
