--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionNotas/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionNotas/ver.xhtml
@@ -31,7 +31,7 @@
                 </p:dialog>
                 <p:panelGrid columns="4" class="Container50 Responsive" id="mod_p1">
                     <p:outputLabel for="mod_alumno" value="Alumno: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel id="mod_alumno" value="#{gestionNotaController.notaModifica.idAlumno.nombreCompleto}"></p:outputLabel>
+                    <p:outputLabel id="mod_alumno" value="#{gestionNotaController.notaModifica.alumno.nombreCompleto}"></p:outputLabel>
                     <p:outputLabel for="mod_materia" value="Materia: " class=" Responsive"></p:outputLabel>
                     <p:outputLabel id="mod_materia" value="#{gestionNotaController.notaModifica.idEvaluacion.idMateria.maNombre}"></p:outputLabel>
                     <p:outputLabel for="mod_evaluacion" value="Evaluación: " class=" Responsive"></p:outputLabel>
