--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/ver.xhtml
@@ -30,9 +30,9 @@
                 </p:dialog>
                 <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p1">
                     <p:outputLabel for="mod_carne" value="Carnet: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel id="mod_carne" value="#{gestionMatriculaController.matriculaModifica.idAlumno.alCarnet}"></p:outputLabel>
+                    <p:outputLabel id="mod_carne" value="#{gestionMatriculaController.matriculaModifica.alumno.alCarnet}"></p:outputLabel>
                     <p:outputLabel for="mod_nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel id="mod_nombre" value="#{gestionMatriculaController.matriculaModifica.idAlumno.nombreCompleto}"></p:outputLabel>
+                    <p:outputLabel id="mod_nombre" value="#{gestionMatriculaController.matriculaModifica.alumno.nombreCompleto}"></p:outputLabel>
                     <p:outputLabel for="mod_grado" value="Grado: " class=" Responsive" ></p:outputLabel>
                     <p:outputLabel id="mod_grado" value="#{gestionMatriculaController.matriculaModifica.idGrado.grNombre}"></p:outputLabel>
                     <p:outputLabel for="mod_seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
