--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/cursoAlumno.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/cursoAlumno.xhtml
@@ -45,7 +45,7 @@
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
                     <p:commandButton  value="Inscribir" action="#{gestionCursoController.alumnosSeleccion()}" update="consulta"  />
-                    <p:commandButton value="Regresa" immediate="true">
+                    <p:commandButton value="regresar" immediate="true">
                         <p:ajax listener="#{gestionCursoController.setIndexMenu(0)}"/>
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
