--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexRespuesta.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexRespuesta.xhtml
@@ -9,7 +9,7 @@
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Año Escolar" url="#"/>
-            <p:menuitem value="Gestion de Respustas" url="#{siteUrls.gestionEvaluacion}"/>
+            <p:menuitem value="Gestion de Respuestas" url="#{siteUrls.gestionEvaluacion}"/>
             <p:menuitem value="Agregar Respuestas"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
