--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/editar.xhtml
@@ -50,7 +50,7 @@
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar" action="#{gestionComponentesInteractivosController.guardarModifica()}" update="p1" />
                     <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="p1" resetValues="true" />
+                        <p:ajax update="p1,focus" resetValues="true" oncomplete="configurarEnterTab()"/>
                     </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="p1" resetValues="true" listener="#{gestionComponentesInteractivosController.setIndexMenu(0)}"/>
