--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
@@ -45,7 +45,7 @@
                     <p:column headerText="Teléfono" style="width: 8%" filterBy="#{car.dcTelefonoEm1}" filterMatchMode="contains" filterable="true">
                         #{formatUtils.getFormatedPhone(car.dcTelefonoEm1)}
                     </p:column>
-                    <p:column headerText="Teléfono" style="width: 8%" filterBy="#{car.dcTelefonoEm2}" filterMatchMode="contains" filterable="true">
+                    <p:column headerText="Celular" style="width: 8%" filterBy="#{car.dcTelefonoEm2}" filterMatchMode="contains" filterable="true">
                         #{formatUtils.getFormatedPhone(car.dcTelefonoEm2)}
                     </p:column>
                     <p:column headerText="Dirección" filterBy="#{car.dcDireccion}" filterMatchMode="contains" filterable="true">
