correccion de bugs, avance reporte de boleta de nota, falta verificar xq gestionar nota, reporte de nota y boleta de nota tira diferente informacion

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/gestionMaterias.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/gestionMaterias.xhtml
@@ -26,7 +26,7 @@
                     <p:outputLabel for="docente" value="Docente:"></p:outputLabel>
                     <p:outputLabel id="docente" value="#{gestionarDocentesController.docenteModifica.nombreCompleto}"></p:outputLabel>
                     <p:outputLabel for="materias" value="Materias: "></p:outputLabel>
-                    <p:selectOneMenu tabindex="1" id="materias" value="#{gestionarDocentesController.materia}" converter="materia">
+                    <p:selectOneMenu tabindex="1" id="materias" value="#{gestionarDocentesController.materia}" converter="materia" filter="true" filterMatchMode="contains">
                         <f:selectItems itemLabel="#{mat.idGrado.grNombre} - #{mat.maNombre}" itemValue="#{mat}" value="#{gestionarDocentesController.materias}" var="mat" ></f:selectItems>
                     </p:selectOneMenu>
                     <p:commandButton value="Agregar" action="#{gestionarDocentesController.agregarMateria()}" update="consulta,materias"></p:commandButton>
