--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/editar.xhtml
@@ -22,6 +22,7 @@
                 <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda" width="400" maximizable="true">
                     <ui:include src="ayuda/editar.xhtml"></ui:include>
                 </p:dialog>
+                <p:focus id="focus" context="p1"></p:focus>
                 <p:panelGrid columns="2" id="p1">
                     <p:outputLabel for="nombre" value="Nombre: "></p:outputLabel>
                     <p:inputText id="nombre" value="#{gestionComponentesInteractivosController.modifica.scNombre}" maxlength="#{tamanioUtils.nombreSuperCompMax}"></p:inputText>
