--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/editar.xhtml
@@ -34,9 +34,9 @@
                     </p:selectOneMenu>
 
                     <p:outputLabel for="mod_grado" value="Grado: " class=" Responsive" ></p:outputLabel>
-                    <p:selectOneMenu tabindex="4" id="mod_grado" filter="true" filterMatchMode="contains" value="#{gestionCursoController.cursoModifica.idGrado.idGrado}" required="true">
+                    <p:selectOneMenu tabindex="4" id="mod_grado" filter="true" filterMatchMode="contains" value="#{gestionCursoController.cursoModifica.idGrado.idGrado}" required="true" valueChangeListener="#{gestionCursoController.getSeccionesGradoModifica}">
                         <f:selectItems itemValue="#{grado.idGrado}" itemLabel="#{grado.grNombre}" value="#{gestionCursoController.gradoModificaList}" var="grado" ></f:selectItems>
-                        <p:ajax event="valueChange" update="mod_seccion"/>
+                        <p:ajax event="valueChange" update="mod_seccion,mod_materia"/>
                     </p:selectOneMenu>
                     <p:outputLabel for="mod_seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
                     <p:selectOneMenu tabindex="5" id="mod_seccion" value="#{gestionCursoController.cursoModifica.idSeccion.idSeccion}" filter="true" filterMatchMode="contains" required="true">
